# browser-cli

./: HANDOFF.md  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
browser_cli/: __init__.py  cli.py
browser_cli/agent_examples/: __init__.py  agent-playbook.md  auth-lifecycle-playbook.md  persistent-context-playbook.md  setup-verification-playbook.md
browser_cli/agent_examples/cases/: __init__.py  browser-state.yaml  file-upload.yaml  form-fill.yaml  interactive-targeting.yaml  page-diagnostics.yaml
browser_cli/agent_metadata/: __init__.py  openai.yaml
browser_cli/agent_references/: __init__.py  action-playbook.md  connect-from-codex.md  quickstart.md  skill-positioning.md
browser_cli/agent_skill/: SKILL.md  __init__.py
docs/: README.md  connect-from-codex.md  device-code-auth.md  json-contract.md  mvp-quickstart.md  quickstart.md  skill-positioning.md  usable-version.md
examples/: README.md  agent-playbook.md  auth-lifecycle-playbook.md  persistent-context-playbook.md  setup-verification-playbook.md
examples/cases/: agent-primitives.yaml  checkout-flow.yaml  content-extraction.yaml  form-fill.yaml  interactive-targeting.yaml  navigation-flow.yaml  page-inspection.yaml
lex_browser_runtime/: __init__.py  auth_contexts.py  cli.py  config.py  observer.py  research.py  runtime.py  telemetry.py
lex_browser_runtime/assist/: __init__.py  api.py  douban.py  service.py  state.py
lex_browser_runtime/browser/: __init__.py  actions.py  backends.py  cases.py  lexmount.py  models.py
lex_browser_runtime/registry/: __init__.py  adapter.py  gov_portals.py  models.py  site_hints.py  utils.py
lex_browser_runtime/registry/data/: gov_portals.json  site_hints.yaml
lex_browser_runtime/registry/data/adapters/: 3dmgame.com.json  academia.edu.json  archive.org.json  asos.com.json  bilibili.com.json  cqvip.com.json  ctrip.com.json  dangdang.com.json  docin.com.json  douban.com.json  gamespot.com.json  sina.com.cn.json  suning.com.json  thepaper.cn.json  you.163.com.json  youtube.com.json  zalando.com.json
references/: action-playbook.md  quickstart.md  skill-positioning.md  usable-status.md
tests/: test_cli.py  test_docs_connect_from_codex.py  test_docs_device_code_auth.py  test_docs_quickstart.py  test_examples.py  test_json_contract.py  test_readme_prompt.py  test_skill_action_workflow.py  test_skill_auth_workflow.py  test_skill_context_reuse.py  test_skill_doctor_smoke_workflow.py  test_skill_doctor_workflow.py  test_skill_guidance.py  test_skill_metadata.py
