[project]
name = "browser-cli"
version = "0.3.13"
description = "Standalone CLI for operating Lexmount browser sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lex-browser-runtime[skill] @ git+https://github.com/lexmount/website-skills.git@main",
]

[project.scripts]
browser-cli = "browser_cli.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["browser_cli*"]

[tool.setuptools.package-data]
browser_cli = [
    "agent_skill/*.md",
    "agent_references/*.md",
    "agent_examples/*.md",
    "agent_examples/cases/*.yaml",
    "agent_metadata/*.yaml",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
