[project]
name = "browser-cli"
version = "0.3.22"
description = "Standalone CLI for operating Lexmount browser sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "lexmount>=0.5.14",
    "playwright>=1.40",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "regex>=2024.11.6",
    "websocket-client>=1.8",
]

[project.scripts]
browser-cli = "browser_cli.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["browser_cli*", "lex_browser_runtime*"]

[tool.setuptools.package-data]
browser_cli = [
    "agent_skill/*.md",
    "agent_references/*.md",
    "agent_examples/*.md",
    "agent_examples/cases/*.yaml",
    "agent_metadata/*.yaml",
]
lex_browser_runtime = [
    "registry/data/gov_portals.json",
    "registry/data/site_hints.yaml",
    "registry/data/adapters/*.json",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8,<0.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
